--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,10 @@ body {
 	@apply py-2 px-3 rounded-md text-gray-500 hover:bg-gray-100 hover:text-black;
 }
 
+.layout {
+	@apply flex flex-col px-12 py-8;
+}
+
 .navLinkContainer:before {
 	content: '';
 	position: absolute;
