--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 .layout {
-	@apply flex flex-col px-32 py-8;
+	@apply flex flex-col py-8 max-w-[1200px] mx-auto;
 }
 
 .navLinkContainer:before {
