--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 .layout {
-	@apply flex flex-col py-8 max-w-[1200px] mx-auto;
+	@apply flex flex-col py-8 max-w-[1200px] mx-auto gap-4;
 }
 
 .navLinkContainer:before {
