--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,13 @@
 
 body {
 	background: #fafafa;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 .navLink {
-	@apply py-2 px-3 rounded-md text-gray-500 hover:bg-gray-100 hover:text-black dark:text-white dark:hover:bg-[#1f1f1f];
+	@apply py-2 px-3 rounded-md text-gray-500 hover:bg-gray-100 hover:text-black dark:text-dark_font dark:hover:bg-dark_hover;
 }
 
 .layout {
@@ -33,8 +36,6 @@ body {
 	position: absolute;
 	left: 10%;
 	bottom: 0;
-	/* transform: translateX(10%); */
-	/* height: 1px; */
 	width: 80%;
 	border-bottom: 2px solid;
 	animation: borderSlide 0.3s ease-in-out;
