--- a/app/globals.css
+++ b/app/globals.css
@@ -52,9 +52,12 @@ body {
 } */
 
 .table {
-	display: grid;
+	/* display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 24px;
+	gap: 24px; */
+	display: grid;
+	grid-template-columns: repeat(3, minmax(0, 1fr));
+	grid-gap: 24px;
 }
 
 /* border animation */
